add bellota font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9015,3 +9015,14 @@ input[type=range]::-ms-thumb {
     margin-top: 1.2rem;
   }
 }
+
+@font-face {
+  font-family: "bellotaregular";
+  src: url("../font/Bellota-Regular-webfont.woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+html {
+  font-family: bellotaregular;
+}
