--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -11,5 +11,11 @@ html {
   font-family: bellotaregular;
 }
 header{
- 
+ section{
+   height: 90vh;
+   background-image: url("../img/bgheader.jpg");
+   background-size: cover;
+   
+ }
 }
+
