--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9058,6 +9058,7 @@ main h2 {
 
 main section {
   height: 100vh;
+  width: 100%;
 }
 
 main section .cardproduct {
@@ -9065,5 +9066,17 @@ main section .cardproduct {
 }
 
 main section .card {
-  margin: 5px;
+  margin: 15px;
+  height: 300px;
+  width: 400px;
+}
+
+main section .card:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  opacity: .8;
+}
+
+main section .card .card-title {
+  font-size: 20px;
 }
